<resources>
    <string name="app_name">Connect 4</string>
    <string name="connect4">Connect 4</string>
    <string name="play">play</string>
    <string name="home">Home</string>
    <string name="restart">Restart</string>
    <string name="clear">Clear</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="score">0:0</string>
    <string name="board">Board</string>
    <string name="chip">Chip</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="red_underlined"><u>Red</u></string>
    <string name="blue_underlined"><u>Blue</u></string>
    <string name="arrow_down_description">Arrow down</string>
    <string name="score_placeholders">%1$d:%2$d</string>
    <string name="new_game">New Game</string>
    <string name="red_win">Red Player Win!</string>
    <string name="blue_win">Blue Player Win!</string>
    <string name="settings">Settings</string>
    <string name="arrow_back">Arrow back</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="welcome">Welcome to the classic 4-in-a-row game!</string>

</resources>